--- a/week4/notes.html
+++ b/week4/notes.html
@@ -27,25 +27,26 @@
                 <ul>
                     <li>Form controls </li>
                     <li>Accessing form elements</li>
-                    <br>const form = document.forms[0];
+                    const form = document.forms[0];
                     <li>Form properties and methods</li>
-                    <br> button  type='submit'>Submit
+                     button  type='submit'>Submit
                     <br> input type='submit' value='Submit'
                     <br> input type='image' src='button.png'
                     <li>Form events </li>
-                    <br> input.addEventListener
+                    input.addEventListener
                     <li>Submitting a form </li>
-                    <br>you can add js to alert the user that the form has been submitted [example in code]
+                    you can add js to alert the user that the form has been submitted [example in code]
                     <li>Retrieving and changing values from a form </li>
-                    <br>This section explains how to use search and replace items in a form.
+                    This section explains how to use search and replace items in a form.
                     <br>focus and blur event handlers
+                    <br>
                     <li>common Form fields</li>
-                    <br>[input] fields, including text, passwords, check boxes, radio buttons, and file uploads
+                    [input] fields, including text, passwords, check boxes, radio buttons, and file uploads
                     <br>[select] menus for drop-down lists of options
                     <br>[textarea] elements for longer text entry
                     <br>[button] elements for submitting and resetting forms
                     <li>Form validation</li>
-                    <br>Form validation can occur on the client side (using JavaScript), and on the server side. 
+                    can occur on the client side (using JavaScript), and on the server side. 
                     <br>use both client-side and server-side validation.
                     <br>Don't rely only on js to validate as the js can be manipulated and bypassed!
                 </ul>
@@ -57,15 +58,15 @@
                 <ul>
                     <li>An introduction to OOP</li>
                     <li>Constructor functions</li>
-                    <br>uses a function that defines the properties and methods of an object.
+                    uses a function that defines the properties and methods of an object.
                     <li>Using classes in JavaScript</li>
                     <li>Prototypes</li>
                     <li>Public and private methods</li>
-                    <br>similar to public and private variables.
+                    similar to public and private variables.
                     <li>Inheritance</li>
-                    <br>example: ford, hunda, and kia can inherit from the car method
+                    example: ford, hunda, and kia can inherit from the car method
                     <li>Creating objects from objects</li>
-                    <br>you can use multiple opbjects to make up other objects, person makes up student and teacher and
+                    you can use multiple opbjects to make up other objects, person makes up student and teacher and
                     both make up a class.
                     <li>Adding methods to built-in objects</li>
                     <li>Mixins</li>
@@ -80,7 +81,7 @@
             <p> Modern JavaScript
                 <ul>
                     <li>Modular JavaScript</li>
-                    <br>modules are blocks of code that can be used again.
+                    modules are blocks of code that can be used again.
                     <br>They have their own global scope 
                     <br>explort and import
                 
