--- a/week4/notes.html
+++ b/week4/notes.html
@@ -91,7 +91,7 @@
         <h3>Code Samples</h3>
         <ul>
             <li><a href="code.html">Code from Readings</a></li>
-            <li><a href="code2.html">Practice Code</a></li>
+            <!-- <li><a href="code2.html">Practice Code</a></li> -->
             <li><a href="/portfolio/team/week4">Team Project Code</a></li>
 
         </ul>
