--- a/week5/notes.html
+++ b/week5/notes.html
@@ -26,24 +26,22 @@
             <p> Testing and Debugging
             <ul>
                 <li>Errors, exceptions, and warnings</li>
-
-                <li>The importance of testing and debugging</li>
-                    
+                <li>The importance of testing and debugging</li>                   
                 <li>Strict mode</li>
                 recomended use - clean code and allows you to detect errors earlier.
                 <li>Debugging in the browser</li>
-                    <br>use an alert in functions (example in code)
+                use an alert in functions (example in code)
                 <li>Using the Console</li>
-                    <br>console.log() 
+                console.log() 
                 <li>Error objects</li>
-                <br>simple error function - const error = new Error();
+                simple error function - const error = new Error();
                 <li>Throwing exceptions</li>
-                <br>The throw statement can be applied to any JavaScript expression, causing the execution of the program to stop.
+                The throw statement can be applied to any JavaScript expression, causing the execution of the program to stop.
                 <br>example in code
                 <li>Exception handling</li>
-                <br>try , catch , and finally
+                try , catch , and finally
                 <li>Testing frameworks</li>
-                <br>Testing frameworks provide a structure to write meaningful tests and then run them.
+                Testing frameworks provide a structure to write meaningful tests and then run them.
                 
             </ul>
             </p>
