--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
             <li><a href="week3/notes.html">Week 3</a></li>
             <li><a href="week4/notes.html">Week 4</a></li>
             <li><a href="week5/notes.html">Week 5</a></li>
+            <li><a href="week6/">Week 6</a></li>
         </ul>
 
         <!-- <p id="demo">A Paragraph.</p>
