--- a/week6/index.html
+++ b/week6/index.html
@@ -23,7 +23,7 @@
             <div class= "todo-filters">
             <button id "allFilter"> All</button>
             <button id "activeFilter"> Active</button>
-            <button id "compleatedFilter"> Compleated</button>
+            <button id "completedFilter"> Completed</button>
             </div>
 
         </div class="add-todo-wrapper">
