--- a/week6/index.html
+++ b/week6/index.html
@@ -6,7 +6,7 @@
     <title>ToDo List</title>
     <meta name="description" content="manage a todo list" />
     <meta name="author" content="Tiffany Quinlan" />
-    <link rel="shortcut icon" href="images/favicon.ico">
+    <!-- <link rel="shortcut icon" href="images/favicon.ico"> -->
     <link rel="stylesheet" href="css/styles.css">
     <script src="https://kit.fontawesome.com/53224be697.js" crossorigin="anonymous"></script>
     <script type="module" src="js/main.js"></script>
