--- a/week6/index.html
+++ b/week6/index.html
@@ -21,9 +21,9 @@
 
             </div>
             <div class="todo-filters">
-                <button id "allFilter"> All</button>
-                <button id "activeFilter"> Active</button>
-                <button id "completedFilter"> Completed</button>
+                <button id = "allFilter"> All</button>
+                <button id = "activeFilter"> Active</button>
+                <button id = "completedFilter"> Completed</button>
             </div>
 
         </div class="add-todo-wrapper">
