--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <li><a href="week4/notes.html">Week 4</a></li>
             <li><a href="week5/notes.html">Week 5</a></li>
             <li><a href="week6/index.html">Week 6</a></li>
+            <li><a href="week7/index.html">Week 7</a></li>
         </ul>
 
         <!-- <p id="demo">A Paragraph.</p>
