--- a/week7/code.html
+++ b/week7/code.html
@@ -18,7 +18,15 @@
         <h1>Code Samples</h1>
     </header>
     <main>
-        <br>
+        <h3>Promise Example</h3>
+        <br>const promise = new Promise( (resolve, reject) => {
+        <br> // initialization code goes here
+        <br> if (success) {
+        <br> resolve(value);
+        <br> } else {
+        <br> reject(error);
+        <br> }
+        <br> });
     </main>
 
     <footer>
