--- a/week7/notes.html
+++ b/week7/notes.html
@@ -25,16 +25,30 @@
             <h4>Chapter 11</h4>
             <p> Testing and Debugging
             <ul>
-                <li> Function properties and methods</li>
+                <li> Function properties and methods</li> 
+                <p>Funtion Discription</p>
                 <li>Immediately Invoked function expressions</li>
+                <p>These IIFE functions create a local scope and can be used to keep the global scope clean</p>
+                <br>Use: Temp Variables and Initialization Code
                 <li>Self-defining functions</li>
+                <p>These will define themselves within the function</p>
                 <li>Recursive functions</li>
+                <p>These types of functions call themselves.</p>
+                <br>Use: factorial
                 <li>Callbacks</li>
+                <p>Similar to Asynchronous Programming, or Threading</p>
                 <li>Promises</li>
+                <p> Pending - Unsettled - resolved or Rejected</p>
+                <br>Example in Code Samples
                 <li>Async functions</li>
+                <p>async Keyword and await operator</p>
                 <li>Functions that return functions</li>
+                <p>Function that returns a function - It must be assigned it to a variable (which then becomes a function) to be used</p>
                 <li>Closures</li>
+                <p>allow access to variables in a function even after that function is not invoked</p>
+                <br>Use: counter example
                 <li>Introduction to functional programming</li>
+                <p> functions are first-class objects</p>
                 <li>Currying</li>
                 
             </ul>
