--- a/week7/code2.html
+++ b/week7/code2.html
@@ -16,8 +16,15 @@
     <header>
         <h1>Code Samples Continued</h1>
     </header>
-
+<main>
+    <button id='number'>Number Fact</button>
+<button id='chuck'>Chuck Norris Fact</button>
+<div id='output'>
+    Ajax response will appear here
+</div>
+</main>
     <footer>
+        <script src='main.js'></script>
         <p> <a href="/portfolio/week5/notes.html">Week 5</a> Created by Tiffany H | Copyright 2020</p>
     </footer>
 </body>
