--- a/week7/notes.html
+++ b/week7/notes.html
@@ -23,41 +23,75 @@
 
         <div>
             <h4>Chapter 11</h4>
-            <p> Testing and Debugging
+            <p> Further Functions
             <ul>
-                <li> Function properties and methods</li> 
+                <li> Function properties and methods</li>
                 <p>Funtion Discription</p>
                 <li>Immediately Invoked function expressions</li>
                 <p>These IIFE functions create a local scope and can be used to keep the global scope clean</p>
-                <br>Use: Temp Variables and Initialization Code
+                Use: Temp Variables and Initialization Code
+                <br>
                 <li>Self-defining functions</li>
                 <p>These will define themselves within the function</p>
                 <li>Recursive functions</li>
                 <p>These types of functions call themselves.</p>
-                <br>Use: factorial
+                Use: factorial
+                <br>
                 <li>Callbacks</li>
                 <p>Similar to Asynchronous Programming, or Threading</p>
                 <li>Promises</li>
                 <p> Pending - Unsettled - resolved or Rejected</p>
-                <br>Example in Code Samples
+                Example in Code Samples
+                <br>
                 <li>Async functions</li>
                 <p>async Keyword and await operator</p>
                 <li>Functions that return functions</li>
-                <p>Function that returns a function - It must be assigned it to a variable (which then becomes a function) to be used</p>
+                <p>Function that returns a function - It must be assigned it to a variable (which then becomes a
+                    function) to be used</p>
                 <li>Closures</li>
                 <p>allow access to variables in a function even after that function is not invoked</p>
-                <br>Use: counter example
+                Use: counter example
+                <br>
                 <li>Introduction to functional programming</li>
                 <p> functions are first-class objects</p>
+                Pure Functions and Higher-Order Functions
+                <br>
                 <li>Currying</li>
-                
+                <p>partial functions - Returns a function, allows you to turn a single function into a series of
+                    functions</p>
+                example in Code Samples
+                <br>
             </ul>
             </p>
         </div>
-        
+
+        <div>
+            <p> AJAX (Asynchronous JavaScript and XML)
+            <ul>
+                <li> Clients and servers</li>
+                client: request a resource - server: processes the request and sends back a response
+                <p>Ajax allows JavaScript to request resources from a server on behalf of the client.</p>
+                <li>A brief history of Ajax</li>
+                <p>evolded in order to allow parts of the webpage to update without having to reload the entire page.
+                </p>
+                <li>Communicating with the server using the Fetch API</li>
+                XMLHttpRequest object - allows public use of object data - fetch(url)
+                <p>Example in Sample Code</p>
+                <br>
+                <li>Receiving data with Ajax</li>
+                Ajax Example
+                <li>Sending data with Ajax</li>
+                Ajax Example
+                <li>Form data</li>
+            </ul>
+            </p>
+        </div>
+
         <h3>Code Samples</h3>
         <ul>
             <li><a href="code.html">Code from Readings</a></li>
+            <p>Example of Recieving and Sending data with Ajax</p>
+            <li><a href="code2.html">Ajax Example</a></li>
             <li><a href="/portfolio/team/week7">Team Project Code</a></li>
         </ul>
     </main>
