--- a/week7/notes.html
+++ b/week7/notes.html
@@ -26,40 +26,40 @@
             <p> Further Functions
             <ul>
                 <li> Function properties and methods</li>
-                <p>Funtion Discription</p>
+                Funtion Discription
                 <li>Immediately Invoked function expressions</li>
-                <p>These IIFE functions create a local scope and can be used to keep the global scope clean</p>
+                These IIFE functions create a local scope and can be used to keep the global scope clean
                 Use: Temp Variables and Initialization Code
                 <br>
                 <li>Self-defining functions</li>
-                <p>These will define themselves within the function</p>
+                These will define themselves within the function
                 <li>Recursive functions</li>
-                <p>These types of functions call themselves.</p>
+                These types of functions call themselves.
                 Use: factorial
                 <br>
                 <li>Callbacks</li>
-                <p>Similar to Asynchronous Programming, or Threading</p>
+                Similar to Asynchronous Programming, or Threading
                 <li>Promises</li>
-                <p> Pending - Unsettled - resolved or Rejected</p>
-                Example in Code Samples
+                Pending - Unsettled - resolved or Rejected
+                <br> Example in Code Samples
                 <br>
                 <li>Async functions</li>
-                <p>async Keyword and await operator</p>
+                async Keyword and await operator
                 <li>Functions that return functions</li>
-                <p>Function that returns a function - It must be assigned it to a variable (which then becomes a
-                    function) to be used</p>
+                Function that returns a function - It must be assigned it to a variable (which then becomes a
+                function) to be used
                 <li>Closures</li>
-                <p>allow access to variables in a function even after that function is not invoked</p>
-                Use: counter example
+                allow access to variables in a function even after that function is not invoked
+                <br> Use: counter example
                 <br>
                 <li>Introduction to functional programming</li>
-                <p> functions are first-class objects</p>
+                functions are first-class objects
                 Pure Functions and Higher-Order Functions
                 <br>
                 <li>Currying</li>
-                <p>partial functions - Returns a function, allows you to turn a single function into a series of
-                    functions</p>
-                example in Code Samples
+                partial functions - Returns a function, allows you to turn a single function into a series of
+                functions
+                <br>example in Code Samples
                 <br>
             </ul>
             </p>
@@ -70,13 +70,13 @@
             <ul>
                 <li> Clients and servers</li>
                 client: request a resource - server: processes the request and sends back a response
-                <p>Ajax allows JavaScript to request resources from a server on behalf of the client.</p>
+                <br>Ajax allows JavaScript to request resources from a server on behalf of the client.
                 <li>A brief history of Ajax</li>
-                <p>evolded in order to allow parts of the webpage to update without having to reload the entire page.
-                </p>
+                evolded in order to allow parts of the webpage to update without having to reload the entire page.
+
                 <li>Communicating with the server using the Fetch API</li>
                 XMLHttpRequest object - allows public use of object data - fetch(url)
-                <p>Example in Sample Code</p>
+                Example in Sample Code
                 <br>
                 <li>Receiving data with Ajax</li>
                 Ajax Example
@@ -90,8 +90,8 @@
         <h3>Code Samples</h3>
         <ul>
             <li><a href="code.html">Code from Readings</a></li>
-            <p>Example of Recieving and Sending data with Ajax</p>
             <li><a href="code2.html">Ajax Example</a></li>
+            <p>Example of Recieving and Sending data with Ajax</p>
             <li><a href="/portfolio/team/week7">Team Project Code</a></li>
         </ul>
     </main>
