--- a/week7/code2.html
+++ b/week7/code2.html
@@ -12,20 +12,27 @@
     <link rel="stylesheet" href="/portfolio/CSS/styles.css">
 </head>
 <html>
-    <body>
+
+<body>
     <header>
         <h1>Code Samples Continued</h1>
     </header>
-<main>
-    <button id='number'>Number Fact</button>
-<button id='chuck'>Chuck Norris Fact</button>
-<div id='output'>
-    Ajax response will appear here
-</div>
-</main>
+    <main>
+        <button id='number'>Number Facts about 42</button>
+        <button id='chuck'>Chuck Norris Fact</button>
+        <div id='output'>
+            Ajax response will appear here
+        </div>
+
+        <form id='todo' action='https://jsonplaceholder.typicode.com/todos' method='POST'>
+            <input type='text' name='task' placeholder='Add Task' autofocus required>
+            <button type='submit'>Add Task</button>
+        </form>
+    </main>
     <footer>
         <script src='main.js'></script>
-        <p> <a href="/portfolio/week5/notes.html">Week 5</a> Created by Tiffany H | Copyright 2020</p>
+        <p> <a href="/portfolio/week7/notes.html">Week 7</a> Created by Tiffany H | Copyright 2020</p>
     </footer>
 </body>
+
 </html>
