--- a/week7/notes.html
+++ b/week7/notes.html
@@ -90,8 +90,7 @@
         <h3>Code Samples</h3>
         <ul>
             <li><a href="code.html">Code from Readings</a></li>
-            <li><a href="code2.html">Ajax Example</a></li>
-            <p>Example of Recieving and Sending data with Ajax</p>
+            <p><li><a href="code2.html">Ajax Example</a></li>Example of Recieving and Sending data with Ajax</p>
             <li><a href="/portfolio/team/week7">Team Project Code</a></li>
         </ul>
     </main>
