--- a/challenge/index.html
+++ b/challenge/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD 330 Portal</title>
+    <title>Doctrinal Mastery</title>
     <meta name="author" content="Tiffany Quinlan" />
     <meta name="description" content="Doctrinal Mastery Game" />
     <!-- <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP&family=Patrick+Hand&display=swap"
@@ -16,23 +16,28 @@
 
 <body>
     <header>
-        <h1>Games</h1>
+        <h1>Doctrinal Mastery</h1>
     </header>
     <main>
-    <div>
+        <h2>Games</h2>
+    <div class= 'games'>
         <button type="button" onclick="myFunction()">Memory</button>
         <button type="button" onclick="myFunction()">Speed</button>
+        <!-- <a type = "button" href="speed.html">Speed</a> -->
     </div>
-    <div class = settings>
-        <h2>Settings</h2>
-
+    <h2>Review Scriptures</h2>
+    <div clsass ='study'>
+        <button type="button" onclick="myFunction()">Study</button>
+    </div>
+    <h2>Settings</h2>
+    <div class = 'settings'>
         <div class="dropdown">
-            <button onclick="myFunction()" class="dropbtn"># of Players
+            <button onclick="myFunction()" class="dropbtn"># of Players or teams
                 <i class="fa fa-caret-down"></i></button>
             <div id="myDropdown" class="dropdown-content">
-              <a href="#">Link 1</a>
-              <a href="#">Link 2</a>
-              <a href="#">Link 3</a>
+              <a href="#">1</a>
+              <a href="#">2</a>
+              <a href="#">3</a>
             </div>
           </div>
 
@@ -40,9 +45,10 @@
             <button onclick="myFunction()" class="dropbtn">Scripture Topics
                 <i class="fa fa-caret-down"></i></button>
             <div id="myDropdown" class="dropdown-content">
-              <a href="#">Link 1</a>
-              <a href="#">Link 2</a>
-              <a href="#">Link 3</a>
+              <a href="#">BOM</a>
+              <a href="#">D&C</a>
+              <a href="#">NT</a>
+              <a href="#">OT</a>
             </div>
           </div>
           
