challenge data import

--- a/challenge/index.html
+++ b/challenge/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="CSS/normalize.css">
     <link rel="stylesheet" href="CSS/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script type="module" src="js/main.js"></script>
 </head>
 <html>
 
@@ -53,6 +54,8 @@
           </div>
           
 
+
+
     </div>
 
 
@@ -62,7 +65,6 @@
         <p>Tiffany Hofhiens | Copyright 2020</p>
     </footer>
 
-    <script src="js/main.js"></script>
 </body>
 
 </html>
