--- a/challenge/speed.html
+++ b/challenge/speed.html
@@ -7,29 +7,46 @@
     <link rel="stylesheet" href="CSS/normalize.css">
     <link rel="stylesheet" href="CSS/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script type="module" src="js/ls.js"></script>
 </head>
 <style>
-  h1{
-    color: black;
+    h1 {
+        color: black;
     }
 </style>
+<html>
 
-<header>
-    <h1>Team 1</h1>
-</header>
 <body>
+    <header>
+        <h1>Team 1</h1>
+    </header>
+
+
+
     <h1>Phrase</h1>
-<ul>
+    <!-- <ul>
     <li>refrence 1</li>
     <li>refrence 2</li>
     <li>refrence 3</li>
     <li>refrence 4</li>
-</ul>
+</ul> -->
 
-<button>submit</button>
+    <p id="demo"></p>
 
+    <!-- <p id="test"></p> -->
+
+    <button>submit</button>
+
+
+    <div id=score>
+        <h4 id=score1>Team 1</h4>
+        <h4 id=score2>Team 2</h4>
+    </div>
+
+    <footer>
+        
+    </footer>
 </body>
-<footer>
-    <h4 id=score1>Team 1</h4>
-    <h4 id=score2>Team 2</h4>
-</footer>
+
+
+</html>
