--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
             <li><a href="week5/notes.html">Week 5</a></li>
             <li><a href="week6/index.html">Week 6</a></li>
             <li><a href="week7/notes.html">Week 7</a></li>
+            <li><a href="week8/notes.html">Week 8</a></li>
         </ul>
 
         <!-- <p id="demo">A Paragraph.</p>
