challenge update (begining study / filters)

--- a/challenge/index.html
+++ b/challenge/index.html
@@ -21,44 +21,62 @@
     </header>
     <main>
         <h2>Games</h2>
-    <div class= 'games'>
-        <button type="button" onclick="myFunction()">Memory</button>
-        <button type="button" onclick="myFunction()">Speed</button>
-        <!-- <a type = "button" href="speed.html">Speed</a> -->
-    </div>
-    <h2>Review Scriptures</h2>
-    <div clsass ='study'>
-        <button type="button" onclick="myFunction()">Study</button>
-    </div>
-    <h2>Settings</h2>
-    <div class = 'settings'>
-        <div class="dropdown">
-            <button onclick="myFunction()" class="dropbtn"># of Players or teams
-                <i class="fa fa-caret-down"></i></button>
-            <div id="myDropdown" class="dropdown-content">
-              <a href="#">1</a>
-              <a href="#">2</a>
-              <a href="#">3</a>
+        <div class='games'>
+            <button type="button" onclick="myFunction()">Memory</button>
+            <!-- <button type="button" onclick="myFunction()">Speed</button> -->
+            <a type="button" href="speed.html">Speed</a>
+        </div>
+        <h2>Review Scriptures</h2>
+        <div clsass='study'>
+            <!-- <button type="button" onclick="myFunction()">Study</button> -->
+            <a type="button" href="study.html">study</a>
+        </div>
+        <h2>Settings</h2>
+
+
+        <div class='settings'>
+            <div class="dropdown">
+                <button onclick="myFunction()" class="dropbtn"># of Players or teams
+                    <i class="fa fa-caret-down"></i></button>
+                <div id="myDropdown" class="dropdown-content">
+                    <a href="#">1</a>
+                    <a href="#">2</a>
+                    <a href="#">3</a>
+                </div>
             </div>
-          </div>
 
-          <div class="dropdown">
-            <button onclick="myFunction()" class="dropbtn">Scripture Topics
-                <i class="fa fa-caret-down"></i></button>
-            <div id="myDropdown" class="dropdown-content">
-              <a href="#">BOM</a>
-              <a href="#">D&C</a>
-              <a href="#">NT</a>
-              <a href="#">OT</a>
+
+            <div class="scripture-filters">
+                <div class="dropdown">
+                    <button onclick="myFunction()" class="dropbtn">Scripture Topics
+                        <i class="fa fa-caret-down"></i></button>
+                    <div id="myDropdown" class="dropdown-content">
+                        <a href="#">Acquiring Spiritual Knowledge</a>
+                        <a href="#">The Godhead</a>
+                        <a href="#">The Plan of Salvation</a>
+                        <a href="#">The Atonement of Jesus Christ</a>
+                        <a href="#">The Restoration</a>
+                        <a href="#">Prophets and Revelation</a>
+                        <a href="#">Priesthood and Priesthood Keys</a>
+                        <a href="#">Ordinances and Covenants</a>
+                        <a href="#">Marriage and Family</a>
+                        <a href="#">Commandments</a>
+                    </div>
+                </div>
+
+                <div class="dropdown">
+                    <button onclick="myFunction()" class="dropbtn">Scripture Topics
+                        <i class="fa fa-caret-down"></i></button>
+                    <div id="myDropdown" class="dropdown-content">
+                        <a href="#">BOM</a>
+                        <a href="#">D&C</a>
+                        <a href="#">NT</a>
+                        <a href="#">OT</a>
+                    </div>
+                </div>
             </div>
-          </div>
-          
 
-
-
-    </div>
-
-
+        </div>
     </main>
 
     <footer>
