Load Scriptures from LS in Study.html Page outline for Speed

--- a/challenge/index.html
+++ b/challenge/index.html
@@ -20,20 +20,24 @@
         <h1>Doctrinal Mastery</h1>
     </header>
     <main>
+        
         <h2>Games</h2>
         <div class='games'>
-            <button type="button" onclick="myFunction()">Memory</button>
             <!-- <button type="button" onclick="myFunction()">Speed</button> -->
             <a type="button" href="speed.html">Speed</a>
+            <!-- <button type="button" onclick="myFunction()">Memory</button> -->
+            <a type="button" href="Memory.html">Memory</a>
         </div>
-        <h2>Review Scriptures</h2>
+
+
+        <h2>Review</h2>
         <div clsass='study'>
             <!-- <button type="button" onclick="myFunction()">Study</button> -->
             <a type="button" href="study.html">study</a>
         </div>
+
+
         <h2>Settings</h2>
-
-
         <div class='settings'>
             <div class="dropdown">
                 <button onclick="myFunction()" class="dropbtn"># of Players or teams
@@ -65,7 +69,7 @@
                 </div>
 
                 <div class="dropdown">
-                    <button onclick="myFunction()" class="dropbtn">Scripture Topics
+                    <button onclick="myFunction()" class="dropbtn">Scripture Books
                         <i class="fa fa-caret-down"></i></button>
                     <div id="myDropdown" class="dropdown-content">
                         <a href="#">BOM</a>
