--- a/challenge/speed.html
+++ b/challenge/speed.html
@@ -14,37 +14,31 @@
 
 <body>
     <header>
-        <h1>Team 1</h1>
+        <h1>Scripture Speed</h1>
+        <div id=reference></div>
     </header>
+    <main>
+        <h3>Match the Phrase</h3>
 
-    <h2>Phrase</h2>
+        <div id=options></div>
 
-    <h3>w3schools Example Json Parse()</h3>
-    <p id="demo"></p>
+       <!-- <h4>w3schools Example Json Parse()</4>
+        <p id="demo"></p> -->
 
-    <div id=reference></div>
+        <button>submit</button>
 
-    <div id=options></div>
-
-
-
-    <!-- <h1>Object</h1>
-    <p id="test"></p>
-
-    <h1>Json parse()</h1>
-    <div id="data">  Data  </div> -->
-
-
-    <button>submit</button>
-
-
-    <div id=score>
-        <h4 id=score1>Team 1</h4>
-        <h4 id=score2>Team 2</h4>
+   
     </div>
-
+    </main>
     <footer>
-
+        <div class = stats>
+            <div id=time>
+                <h4 id=clock>time</h4>
+            </div>
+    
+            <div id=score>
+                <h4>score</h4>
+            </div>
     </footer>
 </body>
 
