--- a/challenge/study.html
+++ b/challenge/study.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="CSS/normalize.css">
     <link rel="stylesheet" href="CSS/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <script type="module" src="js/ls.js"></script>
+    <script type="module" src="js/main.js"></script>
 
 </head>
 <html>
@@ -15,14 +15,45 @@
 <body>
     <header>
         <h1>Scripture study</h1>
+
+        <div class="scripture-filters">
+            <div class="dropdown">
+                <button onclick="myFunction()" class="dropbtn">Scripture Topics
+                    <i class="fa fa-caret-down"></i></button>
+                <div id="myDropdown" class="dropdown-content">
+                  <a href="#">Acquiring Spiritual Knowledge</a>
+                  <a href="#">The Godhead</a>
+                  <a href="#">The Plan of Salvation</a>
+                  <a href="#">The Atonement of Jesus Christ</a>
+                  <a href="#">The Restoration</a>
+                  <a href="#">Prophets and Revelation</a>
+                  <a href="#">Priesthood and Priesthood Keys</a>
+                  <a href="#">Ordinances and Covenants</a>
+                  <a href="#">Marriage and Family</a>
+                  <a href="#">Commandments</a>
+                </div>
+              </div>
+            
+              <div class="dropdown">
+                <button onclick="myFunction()" class="dropbtn">Scripture Books
+                    <i class="fa fa-caret-down"></i></button>
+                <div id="myDropdown" class="dropdown-content">
+                  <a href="#">BOM</a>
+                  <a href="#">D&C</a>
+                  <a href="#">NT</a>
+                  <a href="#">OT</a>
+                </div>
+              </div>
+            </div>
+
     </header>
     <main>
-        <div id= Scriptures></div>
-
+      <!-- <button id ='load'>Load Scriptures</button> -->
+      <div id = 'scriptureList'></div>
 
     </main>
     <footer>
-
+        <h3>Filter By</h3>
         <div class="scripture-filters">
             <div class="dropdown">
                 <button onclick="myFunction()" class="dropbtn">Scripture Topics
