--- a/week8/notes.html
+++ b/week8/notes.html
@@ -26,15 +26,23 @@
             <p> CSS3 Transforms and Transitions
             <ul>
                 <li>Transforms</li>
-                <li>Translation</li>
-                <li>Scaling</li>
-                <li>Rotation</li>
-                <li>Skew</li>
-                <li>Transitions</li>
-                duration and timing
+                Most of the transformations are straight forward and simple code.
+                <br> Some key things to remember
+                <br> altering a width , height or font-size alters the space allocated for the element and can affect
+                the layout.
+                <br> scale() does not alter the space allocated for the element.
+                <br> transformations are applied in the order provided
+                <ol>
+                    <li>Translation</li>
+                    <li>Scaling</li>
+                    <li>Rotation</li>
+                    <li>Skew</li>
+                    <li>Transitions</li>
+                </ol>
                 <li>Animations</li>
+                duration and timing
                 <li>Keyframes</li>
-                <li></li>
+
             </ul>
             </p>
         </div>
@@ -43,10 +51,21 @@
             <h4>Chapter 12</h4>
             <p> Canvas, SVG, and Drag and Drop
             <ul>
-                <li>Canvas</li>
-                History
-                <p>Element</p>
-                <li>SVG</li>
+                <li>Things to do with Canvas</li>
+                <ol>
+                    <li>draw, display text</li>
+                    <li>Image Manipulation</li> color - black and white
+                    <li>Video Manipulation</li> frame pause and play
+                </ol>
+                <br>Canvas allows for pixel manipulation
+                <br>objects don't allow later that you can modify
+                <br>allow you to save the images you create to a PNG or JPEG file.
+                </p>
+                <li>SVG</li> Scalable Vector Graphics
+
+                <br>Both canvas and SVG allow you to draw custom shapes, paths, and fonts
+                <br>
+
                 <li>Drang and Drop</li>
             </ul>
             </p>
