--- a/week8/code.html
+++ b/week8/code.html
@@ -9,7 +9,7 @@
     <!-- <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP&family=Patrick+Hand&display=swap"
         rel="stylesheet"> -->
     <link rel="stylesheet" href="/portfolio/CSS/normalize.css">
-    <link rel="stylesheet" href="/portfolio/CSS/styles.css">
+    <link rel="stylesheet" href="design.css">
 </head>
 <html>
 
@@ -18,10 +18,22 @@
         <h1>Code Samples</h1>
     </header>
     <main>
+        <h2>Canvas</h2>
+        <canvas id="myCanvas" class="myCanvas" width="200" height="200">
+            Sorry! Your browser doesn’t support Canvas.
+        </canvas>
+
+        <h2>SVG</h2>
+        <br> SVG code sample (draw circle)
+        <br>svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 400 400">
+        <br>circle cx="50" cy="50" r="25" fill="red"/>
+        <br>/svg>
       
     </main>
 
     <footer>
+        <script src=canvas.js></script>
+        <script src=main.js></script>
         <p> <a href="/portfolio/week8/notes.html">Week 8</a> Created by Tiffany H | Copyright 2020</p>
     </footer>
 </body>
