week 9 team upload

--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@
             <li><a href="week6/index.html">Week 6</a></li>
             <li><a href="week7/notes.html">Week 7</a></li>
             <li><a href="week8/notes.html">Week 8</a></li>
+            <li><a href="week9/notes.html">Week 9</a></li>
         </ul>
 
         <!-- <p id="demo">A Paragraph.</p>
