game code example

--- a/week9/notes.html
+++ b/week9/notes.html
@@ -10,7 +10,6 @@
         rel="stylesheet"> -->
     <link rel="stylesheet" href="/portfolio/CSS/normalize.css">
     <link rel="stylesheet" href="/portfolio/CSS/styles.css">
-    <link rel="stylesheet" href="design.css">
 </head>
 <html>
 
@@ -42,6 +41,7 @@
         <h3>Code Samples</h3>
         <ul>
             <li><a href="code.html">Code from Readings</a></li>
+            <li><a href="code2.html">Readings Game Example</a></li>
             <li><a href="/portfolio/team/week9">Team Project Code</a></li>
         </ul>
     </main>
