--- a/week9/code2.html
+++ b/week9/code2.html
@@ -9,21 +9,30 @@
     <!-- <link href="https://fonts.googleapis.com/css2?family=Noto+Serif+JP&family=Patrick+Hand&display=swap"
         rel="stylesheet"> -->
     <link rel="stylesheet" href="/portfolio/CSS/normalize.css">
-    <link rel="stylesheet" href="/portfolio/CSS/styles.css">
+    <link rel="stylesheet" href="design.css">
 </head>
 <html>
 
 <body>
-    <header>
-        <h1>Code Samples Continued</h1>
-    </header>
-    <main>
-     
-    </main>
-    <footer>
-        <script src='main.js'></script>
-        <p> <a href="/portfolio/week7/notes.html">Week 7</a> Created by Tiffany H | Copyright 2020</p>
-    </footer>
-</body>
+    <section class='dojo'>
+        <div class='quiz-body'>
+        <header>
+          <h1>Quiz Ninja!</h1>
+          <div id='timer'>Time: <strong>20</strong></div>
+          <div id='score'>Score: <strong>0</strong></div>
+        </header>
+        <div id='question'></div>
+        <form id='response'>
+          <input name='answer' type='text'>
+          <button type='submit'>Submit Answer</button>
+        </form>  <div id='result'></div>
+        <div id='info'></div>
+        <button id='start'>Click to Start</button>
+        </div>
+      </section>
 
+      <footer>
+        <script src="main.js"></script>
+      </footer>
+</body>
 </html>
