--- a/week9/notes.html
+++ b/week9/notes.html
@@ -24,7 +24,14 @@
             <h4>Chapter 9</h4>
             <p> The Window Objecct
             <ul>
-                <li></li>
+                <li>Global variables are window objects</li>Example x = 6;
+                <br> window.x = = = x << true;
+                <li>Dialog</li>Examples window.alert // confirm // prompt
+                <li>location</li>info about the URL <br> window.location.protocol // host // hostname // port
+                <li>window.open method (popup)</li>
+                <li>document</li> .write // .cookie (used to store data on users local drive)
+                <li>setTimeout and setInterval</li> used to invoke functions (after set amount of time or repeatedly )
+                <li>Animation</li>
             </ul>
             </p>
         </div>
@@ -33,6 +40,8 @@
             <h4>Chapter 14</h4>
             <p> HTML5 APIs
             <ul>
+                <li></li>
+                <li></li>
                 <li></li>
             </ul>
             </p>
