--- a/week9/notes.html
+++ b/week9/notes.html
@@ -40,9 +40,10 @@
             <h4>Chapter 14</h4>
             <p> HTML5 APIs
             <ul>
-                <li></li>
-                <li></li>
-                <li></li>
+                <li>data- attribute</li>
+                <li>HTML 5</li>  local storage, geolocation, web workers, multimedia
+                <li>Drawing shapes with canvas</li>
+                <li>Shims and polyfills</li>
             </ul>
             </p>
         </div>
