--- a/week9/notes.html
+++ b/week9/notes.html
@@ -40,7 +40,7 @@
             <h4>Chapter 14</h4>
             <p> HTML5 APIs
             <ul>
-                <li>data- attribute</li>
+                <li>data- attribute</li> 
                 <li>HTML 5</li>  local storage, geolocation, web workers, multimedia
                 <li>Drawing shapes with canvas</li>
                 <li>Shims and polyfills</li>
@@ -50,7 +50,7 @@
 
         <h3>Code Samples</h3>
         <ul>
-            <li><a href="code.html">Code from Readings</a></li>
+            <!-- <li><a href="code.html">Code from Readings</a></li> -->
             <li><a href="code2.html">Readings Game Example</a></li>
             <li><a href="/portfolio/team/week9">Team Project Code</a></li>
         </ul>
