--- a/index.html
+++ b/index.html
@@ -28,6 +28,11 @@
             <li><a href="week7/notes.html">Week 7</a></li>
             <li><a href="week8/notes.html">Week 8</a></li>
             <li><a href="week9/notes.html">Week 9</a></li>
+            <li><a href="week10/notes.html">Week 10</a></li>
+            <!-- <li><a href="week11/notes.html">Week 11</a></li> -->
+            <!-- <li><a href="week12/notes.html">Week 12</a></li> -->
+            <!-- <li><a href="week13/notes.html">Week 13</a></li> -->
+            <!-- <li><a href="week14/notes.html">Week 14</a></li> -->
         </ul>
 
         <!-- <p id="demo">A Paragraph.</p>
