--- a/week10/notes.html
+++ b/week10/notes.html
@@ -32,8 +32,7 @@
                 <li>Code Examples: </li>"[Bb]anana|[Cc]herry"
                 <br>//This code accepts 4 inputs
                 <li>JavaScript </li>Constraint Validation API
-                <li>Elements from DOM</li>
-                <br>setCustomValidity(message)
+                <li>Elements from DOM</li>setCustomValidity(message)
                 <li>Code Examples: </li>
             </ul>
             </p>
@@ -44,7 +43,7 @@
             <p> Fetch API
             <ul>
                 <li>Request / Response HTTP </li>
-                <li>Basic fetch request </li>
+                <li>Basic fetch request </li>Example:
                 <br>fetch('http://example.com/movies.json')
                 <br>.then(response => response.json())
                 <br>.then(data => console.log(data));
