--- a/team/week10/index.html
+++ b/team/week10/index.html
@@ -16,7 +16,7 @@
         </header>
         <main id="content">
             <h1>Quake List</h1>
-            <ul id="quakeList" class="hieksStyles"></ul>
+            <ul id="quakeList" class=""></ul>
         </main>
             <script src="index.js" type="module"></script>
     </body>
