--- a/week10/code.html
+++ b/week10/code.html
@@ -10,6 +10,7 @@
         rel="stylesheet"> -->
     <link rel="stylesheet" href="/portfolio/CSS/normalize.css">
     <link rel="stylesheet" href="/portfolio/CSS/styles.css">
+    <link rel="stylesheet" href="design.css">
 </head>
 <html>
 
@@ -18,10 +19,22 @@
         <h1>Code Samples</h1>
     </header>
     <main>
-      
+        <form name="myForm" action="/action_page.php" onsubmit="return validateForm()" method="post">
+       
+            Name: <input type="text" name="fname">
+            <br>
+            <label for="choose">Would you prefer a banana or cherry?</label>
+            <input id="choose" name="i_like">
+            <br>
+             <input type="submit" value="Submit">
+
+        </form>
     </main>
+ 
+    <a href="https://www.w3schools.com/js/js_validation.asp" target="_blank">more help with form validation</a>
 
     <footer>
+        <script src="main.js"></script>
         <p> <a href="/portfolio/week10/notes.html">Week 10</a> Created by Tiffany H | Copyright 2020</p>
     </footer>
 </body>
